views: Button ripple/highlight is visible during shelf swipe.

More details in the bug.

TEST=manual
BUG=714265

Review-Url: https://codereview.chromium.org/2840773003
Cr-Commit-Position: refs/heads/master@{#468501}

Former-commit-id: 8c6e6113a0f57941108e5267f699bd7dd740828b